[package]
name = "precached-gui"
version = "0.1.0"
authors = ["X3n0m0rph59 <x3n0m0rph59@gmail.com>"]

[dependencies.gtk]
version = "0.3.0"
features = ["v3_22"]

[dependencies.pango]
version = "0.3.0"
features = ["v1_38"]

[dependencies.cairo-rs]
version = "0.3.0"

[dependencies.gdk]
version = "0.7.0"
features = ["v3_22"]

[dependencies.gdk-pixbuf]
version = "0.3.0"

[dependencies.gio]
version = "0.3.0"
features = ["v2_40"]
